src/objects/Poverty_Index__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Poverty Indexes</relationshipLabel>
        <relationshipName>Poverty_Indexes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Female_Head_Spouse_Highest_School_Grade__c</fullName>
        <label>Highest School Grade</label>
        <picklist>
            <picklistValues>
                <fullName>None or preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary standards 1 to 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary standard 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary standard 8 or secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No female head/spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary form 4 or higher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household_Member_Count__c</fullName>
        <description>Number of members in household</description>
        <label>Household Member Count</label>
        <picklist>
            <picklistValues>
                <fullName>Nine or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seven or eight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Six</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One or two</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_dwelling_floor_material__c</fullName>
        <label>Main dwelling floor material</label>
        <picklist>
            <picklistValues>
                <fullName>Wood, earth, or other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement, or tiles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_source_of_lighting_fuel__c</fullName>
        <label>Main source of lighting fuel</label>
        <picklist>
            <picklistValues>
                <fullName>Collected firewood, purchased firewood, grass, or dry cell (torch)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraffin, candles, biogas, or other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity, solar, or gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Male_head_type_of_business__c</fullName>
        <label>Male head type of business</label>
        <picklist>
            <picklistValues>
                <fullName>Does not work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No male head/spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, hunting, forestry, fishing, mining or quarrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_habitable_rooms_in_main_dwelling__c</fullName>
        <label>Num of habitable rooms in main dwelling</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_frying_pans__c</fullName>
        <label>Number of frying pans</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_mosquito_nets__c</fullName>
        <label>Number of mosquito nets</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_towels__c</fullName>
        <label>Number of towels</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Own_iron_box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own iron box</label>
        <type>Checkbox</type>
    </fields>
    <label>Poverty Index</label>
    <nameField>
        <displayFormat>PPI-{0000}</displayFormat>
        <label>Poverty Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Poverty Indexes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>